# src/routes/auth.ts
@@ -5,5 +5,6 @@ const authRouter = express.Router();
 
 // auth routes
 authRouter.post("/auth/login", authController.login);
+authRouter.post("/auth/refresh", authController.refresh);
 
 export default authRouter;
